test/test_examples/syntactic_examples/syntax_error/error_prologue_04.zig
// Syntax error: unexpected path to imported file

const ifj = @import(" ifj24.zig"); 

pub fn main() void {

}  